Closed Bug 1521066 Opened 5 years ago Closed 5 years ago

<table rules=rows style=border:double> shows solid border

Categories

(Core :: Layout: Tables, defect)

64 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- wontfix
firefox65 --- fixed
firefox66 --- fixed

People

(Reporter: moz, Assigned: emilio)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

See http://elektronotdienst-nuernberg.de/Stoerung/Fuerth-Zdf-Stein-Wdst-Feucht-SC-RH/

There is a table with a solid black border around.
That should be a double border and was for ages until recently.

I think this bug is new in Fx 64, also in Nightly 66

Markup is like this:

 <style> table { border:double } </style>
 <table rules=rows>

Works in Fx 63 (I think), Chrome, IE, etc.

Attached file testcase

https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a7f1d2b04291a97a44fc08160b33cf3b0488127c&tochange=178218e7b57ca24ceb7f6aca3674611012fa6b2c

Looks like I broke this, sorry! Thanks a lot for the report, feels weird that nobody noticed until now... Will take a look.

Assignee: nobody → emilio
Flags: needinfo?(emilio)
Blocks: 1487407

Gotta love C++... I missed the break; for that branch so we were always
falling back to the solid border rendering path (which we use if the border is
too small).

Comment on attachment 9037565 [details]
Bug 1521066 - Fix double border rendering of border-collapsed tables. r=jrmuizel

[Beta/Release Uplift Approval Request]

Feature/Bug causing the regression: Bug 1487407

User impact if declined: Some tables may render solid borders instead of double.

Is this code covered by automated tests?: Yes

Has the fix been verified in Nightly?: No

Needs manual test from QE?: No

If yes, steps to reproduce:

List of other uplifts needed: None

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): Just adds back a break; statement which prevents us to fall back to the solid border path we use when the border is too small.

String changes made/needed:

Flags: needinfo?(emilio)
Attachment #9037565 - Flags: approval-mozilla-beta?
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6c6fecd53382
Fix double border rendering of border-collapsed tables. r=jrmuizel
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66

Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:66.0) Gecko/20100101 Firefox/66.0

Confirming that testcase and URL are fixed with today's Nightly.
Thanks!

Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/14963 for changes under testing/web-platform/tests
Flags: qe-verify-
Flags: in-testsuite+

Comment on attachment 9037565 [details]
Bug 1521066 - Fix double border rendering of border-collapsed tables. r=jrmuizel

[Triage Comment]
Extremely simple fix with tests for a table border rendering regression. Approved for 65.0rc1.

Attachment #9037565 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.