Bug 1521066 - Fix double border rendering of border-collapsed tables. r=jrmuizel, a=RyanVM

Gotta love C++... I missed the `break;` for that branch so we were always
falling back to the solid border rendering path (which we use if the border is
too small).

Differential Revision: https://phabricator.services.mozilla.com/D16977